github_data_collector/src/data/issue_comment/jlmelville_uwot.txt
I am curious to see whether there is a way to give individual observations different weights in the UMAP objective function. For instance, I have data from 2 conditions, one with 100 observations and one with 1000.  I would like to have both conditions contribute equally to the embedding. Perhaps naively, I would expect observations from each conditions to take up the same amount of real estate in this balanced analysis. I appreciate any thoughts on how feasible this would be. Thanks in advance! 
Dear all,

I can't get umap to run twice in an R-session without crashing. Initially observed using RunUMAP from Seurat 3.1.1, but also the very basic code (see below) would not work..
I have tried to resolve this using the hints in https://github.com/cole-trapnell-lab/monocle3/issues/186 and https://github.com/satijalab/seurat/issues/2256, but without any succes..

Any suggestions?

Session and info:

library(uwot)
iris_umap <- umap(iris, pca = 50)

\# And a second time
iris_umap2 <- umap(iris, pca = 50)

\# Crash ....
\# 
\# Bioconductor version [1] ‘3.10’
\# 
\# R Under development (unstable) (2019-11-05 r77375)
\# Platform: x86_64-w64-mingw32/x64 (64-bit)
\# Running under: Windows >= 8 x64 (build 9200)
\# 
\# Matrix products: default
\# 
\# locale:
\# [1] LC_COLLATE=English_United States.1252  LC_CTYPE=English_United States.1252    LC_MONETARY=English_United States.1252
\# [4] LC_NUMERIC=C                           LC_TIME=English_United States.1252    
\# 
\# attached base packages:
\# [1] stats     graphics  grDevices utils     datasets  methods   base     
\# 
\# other attached packages:
\# [1] uwot_0.1.5    Matrix_1.2-17
\# 
\# loaded via a namespace (and not attached):
\# [1] compiler_4.0.0     tools_4.0.0        yaml_2.2.0         Rcpp_1.0.3         grid_4.0.0         FNN_1.1.3          RcppParallel_4.4.4
\# [8] lattice_0.20-38   

thanks in advance and with kind regards,
Aldo

Hi,
Thanks for your invaluable work proposing umap in a native R package. Thanks also for the smallvis package.
As you already integrated largeVis and proposed tumap, I am wondering if you planned to integrate HSNE someday. [HDI](https://github.com/Nicola17/High-Dimensional-Inspector) is already integrated in interactive exploration tools such as [cytosplore](https://www.cytosplore.org/), but no R package is available. If you plan it, let me know.
Best.
@sirusb, @ttriche: as contributors of PRs to this package, would you like to be acknowledged as such in the `Authors@R` field of the `DESCRIPTION`? You don't need to provide an email address, just a suitable identifier, e.g. first name and last name. For reference, the field currently looks like:

```R
    c(person("James", "Melville", email = "jlmelville@gmail.com", role = c("aut", "cre")),
    person("Aaron", "Lun", role="ctb"))
```
Any plan to add a way to perform an inverse transform (from embedding to data space)? 

Thanks for the great work!
Hi,
If i run umap_trasform after tumap I get the following error

16:25:52 Writing NN index file to temp file /tmp/RtmpAAapHI/file3b610733a05

Error in .External(list(name = "CppMethod__invoke_void", address = <pointer: (nil)>,  : 
  NULL value passed as symbol address 

while instead everything works if I use umap and then umap_trasform. Of course using the same data  for both methods.

Things I should fix, but which may need a major version change. To be edited and updated as I discover more hidden horrors.

* `min_dist` default is `0.01`, but should be `0.1` for consistency with Python UMAP. Fortunately, this has no discernible effect on the output.
* should `pca` be set by default? If users attempt to throw very high dimensional data at `uwot` at the moment, they are in for a miserable time, because at best Annoy will take hours to complete. At worst, if they are using multi-threading (also a default), Annoy will fail on large datasets due to not being able to read back in an index larger in size than 2GB. I must get back to [rnndescent](https://github.com/jlmelville/rnndescent) and add rp tree support to provide a replacement/alternative.
Hi,

Maybe this is a "no issue".
I´m trying FNN as method for kNN search and need ret_model = TRUE to do metric learning, but I get a error:

Error in x2nn(X, n_neighbors, metric, nn_method, n_trees, search_k, n_refine_iters,  : 
  nn_method = 'FNN' is incompatible with ret_model = TRUE

Do you think there could be a workaround?

Thanks.
Hello,

  i'm trying to install in this environment 
  CentOS 7.6.1810 - gcc 4.8.5
  Microsoft R 3.5.1
  but I receive this error
  
  > devtools::install_github("jlmelville/uwot")
Downloading GitHub repo jlmelville/uwot@master
from URL https://api.github.com/repos/jlmelville/uwot/zipball/master
Installing uwot
'/opt/microsoft/ropen/3.5.1/lib64/R/bin/R' --no-site-file --no-environ  \
  --no-save --no-restore --quiet CMD INSTALL  \
  '/tmp/RtmpWTJkQy/devtools1bf444ad5fb01/jlmelville-uwot-05e3d4e'  \
  --library='/opt/microsoft/ropen/3.5.1/lib64/R/library' --install-tests

* installing *source* package ‘uwot’ ...
** libs
g++ -std=gnu++11 -I/opt/microsoft/ropen/3.5.1/lib64/R/include -DNDEBUG  -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/Rcpp/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppProgress/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppParallel/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppAnnoy/include" -DU_STATIC_IMPLEMENTATION  -DRCPP_PARALLEL_USE_TBB=1 -DSTRICT_R_HEADERS -fpic  -DU_STATIC_IMPLEMENTATION -g -O2 -c RcppExports.cpp -o RcppExports.o
g++ -std=gnu++11 -I/opt/microsoft/ropen/3.5.1/lib64/R/include -DNDEBUG  -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/Rcpp/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppProgress/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppParallel/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppAnnoy/include" -DU_STATIC_IMPLEMENTATION  -DRCPP_PARALLEL_USE_TBB=1 -DSTRICT_R_HEADERS -fpic  -DU_STATIC_IMPLEMENTATION -g -O2 -c connected_components.cpp -o connected_components.o
g++ -std=gnu++11 -I/opt/microsoft/ropen/3.5.1/lib64/R/include -DNDEBUG  -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/Rcpp/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppProgress/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppParallel/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppAnnoy/include" -DU_STATIC_IMPLEMENTATION  -DRCPP_PARALLEL_USE_TBB=1 -DSTRICT_R_HEADERS -fpic  -DU_STATIC_IMPLEMENTATION -g -O2 -c gradient.cpp -o gradient.o
g++ -std=gnu++11 -I/opt/microsoft/ropen/3.5.1/lib64/R/include -DNDEBUG  -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/Rcpp/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppProgress/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppParallel/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppAnnoy/include" -DU_STATIC_IMPLEMENTATION  -DRCPP_PARALLEL_USE_TBB=1 -DSTRICT_R_HEADERS -fpic  -DU_STATIC_IMPLEMENTATION -g -O2 -c nn_descent.cpp -o nn_descent.o
g++ -std=gnu++11 -I/opt/microsoft/ropen/3.5.1/lib64/R/include -DNDEBUG  -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/Rcpp/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppProgress/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppParallel/include" -I"/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppAnnoy/include" -DU_STATIC_IMPLEMENTATION  -DRCPP_PARALLEL_USE_TBB=1 -DSTRICT_R_HEADERS -fpic  -DU_STATIC_IMPLEMENTATION -g -O2 -c nn_parallel.cpp -o nn_parallel.o
nn_parallel.cpp: In function ‘Rcpp::List annoy_hamming_nns(const string&, const NumericMatrix&, std::size_t, std::size_t, std::size_t, bool)’:
nn_parallel.cpp:129:31: error: ‘Hamming’ was not declared in this scope
   NNWorker<int32_t, uint64_t, Hamming, Kiss64Random>
                               ^
nn_parallel.cpp:129:52: error: template argument 3 is invalid
   NNWorker<int32_t, uint64_t, Hamming, Kiss64Random>
                                                    ^
nn_parallel.cpp:130:11: error: invalid type in declaration before ‘(’ token
     worker(index_name, mat, dist, idx, ncol, n, search_k);
           ^
nn_parallel.cpp:130:57: error: expression list treated as compound expression in initializer [-fpermissive]
     worker(index_name, mat, dist, idx, ncol, n, search_k);
                                                         ^
nn_parallel.cpp:132:56: error: invalid initialization of reference of type ‘RcppParallel::Worker&’ from expression of type ‘int’
   RcppParallel::parallelFor(0, nrow, worker, grain_size);
                                                        ^
In file included from nn_parallel.cpp:3:0:
/opt/microsoft/ropen/3.5.1/lib64/R/library/RcppParallel/include/RcppParallel.h:30:13: error: in passing argument 3 of ‘void RcppParallel::parallelFor(std::size_t, std::size_t, RcppParallel::Worker&, std::size_t)’
 inline void parallelFor(std::size_t begin, std::size_t end,
             ^
make: *** [nn_parallel.o] Error 1
ERROR: compilation failed for package ‘uwot’
* removing ‘/opt/microsoft/ropen/3.5.1/lib64/R/library/uwot’
Installation failed: Command failed (1)
>

i've googled but i couldn't find any solutions, i hope you may kindly help with my issue.
regards,
Fabio
Hi,

This R implementation is very useful for me since I only know R. Thank you for making this package.

So I was trying to run a series of UMAP analysis with different parameters. I saved them with `saveRDS()` for later use, especially for `umap_transform()` function for my testing data set. However, when I retrieve it with `readRDS()` I couldn't use the object as the model for `umap_transform()`. The error message reads:
```
Error in .External(list(name = "CppMethod__invoke_void", address = <pointer: (nil)>,  : 
  NULL value passed as symbol address
```
I work on RStudio Server. Not sure if the information helps to solve the problem.

Thanks a lot for making this package again.